# data-models

./: .gitignore  .gitmodules  .remarkrc.js  .textlintrc  .travis.yml  CONTRIBUTORS.yaml  Entity-ngsiv2-datamodels-schema.json  MANIFESTO.md  README.md  RELEASE_NOTES  aga-modifications.md  agile-standardization-principles.md  common-schema.json  common-schema.yaml  context.jsonld  contribution-agreement.md  error.txt  fiware-terms.yaml  full-context.jsonld  geojson-ld.yaml  geometry-schema.json  guidelines.md  ngsi-ld.yaml  ngsi-ld_howto.md  old_context.jsonld  openstreetmap.yaml  package-lock.json  package.json  propertiesDescription.json  roadmap.md  saref-terms.yaml  schema-org.json  schema.org.yaml  terms.jsonld  update_repos.sh  versioning.md
context/: README.md  common-context.jsonld  config_ontologies.json  context2.0.jsonld  merge_subjects_config.json  merge_subjects_config_example.json
context/ontologies_files/: cpsv-ap.json  gsma.json  iudx.json  ngsi-ld-core-context.jsonld  saref.json  saref4agri.json  saref4auto.json  saref4bdlg.json  saref4city.json  saref4ehaw.json  saref4ener.json  saref4envi.json  saref4inma.json  saref4lift.json  saref4syst.json  saref4watr.json  saref4wear.json  sargon.json  schema.org.json
governance/: README.md
pysmartdatamodels/: LICENSE  README.md  __init__.py  changes_log.md  pyproject.toml  pysmartdatamodels.py  pytests.ini  setup.cfg  setup.py  test.py  tests-smart-data-models.py
pysmartdatamodels/pysmartdatamodels/: LICENSE.txt  README.md  __init__.py  __main__.py  changes_log.md  cli.py  commands.py  function_tools.py  pyproject.toml  pysmartdatamodels.py
pysmartdatamodels/pysmartdatamodels/model-assets/: datamodels_metadata.json  official_list_data_models.json
pysmartdatamodels/pysmartdatamodels/my_subject/: CONTRIBUTORS.yaml  TODO  notes.yaml
pysmartdatamodels/pysmartdatamodels/my_subject/my_datamodel/: ADOPTERS.yaml  notes.yaml
pysmartdatamodels/pysmartdatamodels/my_subject/my_datamodel/examples/: example-normalized.json  example-normalized.jsonld  example.json  example.jsonld
pysmartdatamodels/pysmartdatamodels/test/: test_pysmartdatamodels.py
pysmartdatamodels/pysmartdatamodels/utils/: __init__.py  common_utils.py
pysmartdatamodels/pysmartdatamodels4/: README.md  pyproject.toml
pysmartdatamodels/pysmartdatamodels4/pysmartdatamodels/: __init__.py  commands.py
pysmartdatamodels/test/: test_pysmartdatamodels.py
pysmartdatamodels/tests/: conftest.py  test_pysmartdatamodule.py
sdm_as_a_service/: README.md  bash  demo_script2.py  pysdm_api3.py  requirements
specs/: README.md  guidelines.md  howto.md  howto_workgroup_to_code_a_datamodel.md  warning_message_new_spec.md
specs/AllSubjects/: README.md  documentationStatus.json  extra_schemas.json  metadata.json  official_list_data_models.json  official_list_data_terms.json  official_list_properties.json  official_list_repositories.json  official_list_required_properties.json  propertiesDescription.json
specs/Allsubjects/: official_list_properties.json
specs/Alltopics/: README.md  official_list_data_models.json  official_list_data_terms.json  official_list_repositories.json  official_list_terms.json
specs/Common/: Address.schema.json  Addressable.schema.json  Entity.schema.json  Extensible.schema.json  SubAddress.schema.json
specs/pending/: README.md
specs/pending/BuildingType/: example.json  example.jsonld  schema.json  spec.md
specs/pending/DeviceOperation/: example.json
specs/pending/FleetVehicleOperation/: example.json
specs/pending/FleetVehicleStatus/: example.json
templates/: AUTHORS.md  CURRENT-ADOPTERS.md  README.md  data-model-template.md  example1.json  example1.jsonld  spec-how-to.md  tes.json
templates/Subject/: CONTRIBUTORS.md  CONTRIBUTORS.yaml  README.md-Subject-template.md  about_notes_context.md  contributors.YAML  notes_context.jsonld
templates/dataModel/: ADOPTERS.yaml  CURRENT_ADOPTERS.yaml  LICENSE.md  README.md  README.md-template.md  data-model-template.md  example.jsonld  schema.json  spec.md-template.md
templates/dataModel-Repository/: .travis.yml  CREDITS  LICENSE  RELEASE_NOTES  package.json
templates/dataModel-Repository_old/: .gitignore  .travis.yml
templates/dataModel/doc/: spec-example.md
templates/dataModel_for_submision/: ADOPTERS.yaml  notes.yaml  schema.json
templates/dataModel_for_submision/examples/: example-normalized.json  (+3 more)
templates/examples/: GreenEnergyMeasurement-template.json  Tank-example-template.json  WeatherObserved-example.json  device-example-template.json
templates/python_package/: LICENSE  README.md  pyproject.toml
test_data_model/: README.md  _multiple_tests.py  config.json  master_tests.py  master_tests2.py  multiple_tests.py  requirements.txt
test_data_model/tests/: _test_name_attributes.py  test_array_object_structure.py  test_duplicated_attributes.py  test_file_exists.py  test_name_attributes.py  test_schema_descriptions.py  test_schema_metadata.py  test_string_incorrect.py  test_valid_json.py  test_valid_keyvalues_examples.py  test_valid_ngsild.py  test_valid_ngsiv2.py  test_yaml_files.py  utils.py
utils/: 10_model.yaml_v10.py  10_model.yaml_v13.py  10_model.yaml_v7.py  20_create_spec_v11.0.py  20_create_spec_v8.0.py  25_create_subject_context_V7.py  30_f_properties_inventory_10.0.py  35_create_term_pages6.0.py  50_swagger_generator_v3.0.py  60_generate_datamodel_readmes_v17.0.py  README.md  SDM_OpenDataSoft_schema_converter.py  add_submodule.sh  catalogue_dcat-ap_generator.py  check_schema_V3.py  check_submission_datamodel_v0.5.py  compile_datamodels_metadata.py  context_local_generator_V1.0.py  create_broker_entity.php  create_jsonschema_from_csv.py  create_jsonschema_from_payload.py  create_schema_from_google_sheet.py  database_versions.py  examples_conversor.py  keyvalues.json  ldcontext_mappings.json  ngsi-ld_generator_keyvalues_v0.92.py  ngsi-ld_generator_keyvalues_v0.93.py  ngsi-ld_generator_keyvalues_v0.94.py  output.json  quick_install_guide_ngsiV2.sh  remove_broker_entity.php  requirements.txt  test.json  test_pysmartdatamodels.py  update_repos.sh
(+31 files in other folders)
