[tool.poetry]
name = "pysmartdatamodels"
description = "Open-licensed and free data models to model your digital twins, share data in data spaces or develop smart applications"
version = "0.6.11"
authors = ["aabella <alberto.abella@fiware.org>", "jilin <jilin.he@fiware.org>"]
readme = "README.md"
packages = [{include = "pysmartdatamodels"}]
homepage = "https://github.com/smart-data-models/data-models/tree/master/pysmartdatamodels"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]


[project]
name = "pysmartdatamodels"
description = "Open-licensed and free data models to model your digital twins, share data in data spaces or develop smart applications"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["FIWARE", "NGSI", "Orion", "Scorpio", "stellio", "json", "json schema", "jsonld", "data model", "datamodel", "IUDX", "OASC", "TMForum", "data spaces", "digital twins"]
authors = [
    {name="Alberto Abella"},
    {email="alberto.abella@fiware.org" },
    {name="Jilin He"},
    {email="jilin.he@fiware.org"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
dependencies = ["jsonref", "jsonschema", "pytz", "requests", "os-sys", "urllib.request", "rstr", "Faker", "string", "random"]
version = "0.6.11"
readme = "README.md"

[project.urls]
homepage = "https://github.com/smart-data-models/data-models/tree/master/pysmartdatamodels"
bugTracker = "https://github.com/smart-data-models/data-models/issues"
documentation = "https://smartdatamodels.org/index.php/pysmatdatamodels-documentation/"
issues = "https://github.com/smart-data-models/data-models/issues"
source = "https://github.com/smart-data-models/data-models/tree/master/pysmartdatamodels"


[tool.poetry.dependencies]
python = "^3.8"
jsonref = "^1.1.0"
jsonschema = "^4.17.3"
pytz = "^2022.7.1"
requests =  "^2.28.2"
rstr = "^3.2.1"
Faker = "^18.10.1"
urllib3 = "^2.0.5"

[build-system]
requires = ["poetry-core", "jsonref", "jsonschema", "pytz", "requests", "rstr", "Faker", "urllib3"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools.package-data]
pysmartdatamodels = ["utils/*.py", "model-assets/smartdatamodels.json", "model-assets/official_list_data_models.json"]

