[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = pysmartdatamodels
url = https://smartdatamodels.org/
project_urls =
    Docs: SmartDataModels = https://smartdatamodels.org/index.php/documentation/
    CI: GitHub = https://github.com/smart-data-models/data-models/actions
    GitHub: issues = https://github.com/smart-data-models/data-models/issues
    GitHub: repo = https://github.com/smart-data-models/data-models
description = Hundreds of free data models to model your digital twins, share data in data spaces or develop smart applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Collaborative, see CONTRIBUTORS.yaml in the original repositories.
author_email = alberto.abella@fiware.org
zip_safe = False
license_files = 
    LICENSE
platforms = any
license = Apache License 2.0 or other open source licenses
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    pytest_runner
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    jsonref>=0.2
    jsonschema>=3.2.0
    pytz>=2022.2.1
    requests>=2.21
    typer[all]>=0.6.1
    # typer-cli>=0.0.12 # WATCH for update to typer-cli, https://github.com/tiangolo/typer-cli/issues/50
    
tests_require = 
    pycodestyle
    coverage
    pytest>=2.8
    pytest-cov
    pytest-sugar
    semver
[options.package_data]
    #* = *.txt, *.rst
pysmartdatamodels = model-assets/*.json

[options.entry_points]
console_scripts =
    pysmartdatamodels_cli = pysmartdatamodels.__main__:cli

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
#     --cov pysmartdatamodels
#     --cov-report term-missing:skip-covered
#     --cov-report xml
#     -p no:warnings