[tool.poetry]
name = "pysmartdatamodels"
version = "0.5.2"
description = "Open-licensed and free data models to model your digital twins, share data in data spaces or develop smart applications"
authors = ["aabella <alberto.abella@fiware.org>"]
readme = "README.md"

license = "MIT"
homepage = "https://smartdatamodels.org"
repository = "https://github.com/smart-data-models"
keywords = ["fiware", "data model", "datamodel", "IUDX", "OASC", "TMForum", "data spaces", "digital twins"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.setuptools.package-data]
pysmartdatamodels = {"pysmartdatamodels" = ["model-assets/smartdatamodels.json", "model-assets/official_list_data_models.json"]}

[build-system]
requires = ["poetry-core", "jsonref", "jsonschema", "pytz", "requests"]
build-backend = "poetry.core.masonry.api"

