[project]
name = "smartdatamodels_test"
version = "0.0.1"
authors = [
    { name = "Smart Data Models Program contributors", email = "info@smartdatamodels.org" },
]
description = "A validator of payloads with all the smart data models embedded. Only valid for json key values payloads"
keywords = ["Agile standardization", "data models", "FIWARE", "OASC", "IUDX", "TMForum"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://smartdatamodels.org"
"Repository" = "https://github.com/smart-data-models/"
"Bug Tracker" = "https://github.com/smart-data-models/issues"